; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_resident.c_cpm_allocate.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_resident.c_cpm_allocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PAGE_SIZE = common dso_local global i32 0, align 4
@KERN_INVALID_ARGUMENT = common dso_local global i32 0, align 4
@VM_PAGE_NULL = common dso_local global i64 0, align 8
@KERN_NO_SPACE = common dso_local global i32 0, align 4
@vm_page_free_count = common dso_local global i64 0, align 8
@vm_page_free_min = common dso_local global i64 0, align 8
@vm_page_free_wanted = common dso_local global i32 0, align 4
@VM_CHECK_MEMORYSTATUS = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cpm_allocate(i32 %0, i64* %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  store i32 %0, i32* %8, align 4
  store i64* %1, i64** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* @PAGE_SIZE, align 4
  %18 = urem i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %6
  %21 = load i32, i32* @KERN_INVALID_ARGUMENT, align 4
  store i32 %21, i32* %7, align 4
  br label %60

22:                                               ; preds = %6
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* @PAGE_SIZE, align 4
  %25 = udiv i32 %23, %24
  store i32 %25, i32* %15, align 4
  %26 = load i32, i32* %15, align 4
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* @PAGE_SIZE, align 4
  %29 = udiv i32 %27, %28
  %30 = icmp ne i32 %26, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %22
  %32 = load i32, i32* @KERN_INVALID_ARGUMENT, align 4
  store i32 %32, i32* %7, align 4
  br label %60

33:                                               ; preds = %22
  %34 = load i32, i32* %15, align 4
  %35 = load i32, i32* %10, align 4
  %36 = load i32, i32* %11, align 4
  %37 = load i32, i32* %12, align 4
  %38 = load i32, i32* %13, align 4
  %39 = call i64 @vm_page_find_contiguous(i32 %34, i32 %35, i32 %36, i32 %37, i32 %38)
  store i64 %39, i64* %14, align 8
  %40 = load i64, i64* %14, align 8
  %41 = load i64, i64* @VM_PAGE_NULL, align 8
  %42 = icmp eq i64 %40, %41
  br i1 %42, label %43, label %45

43:                                               ; preds = %33
  %44 = load i32, i32* @KERN_NO_SPACE, align 4
  store i32 %44, i32* %7, align 4
  br label %60

45:                                               ; preds = %33
  %46 = load i64, i64* @vm_page_free_count, align 8
  %47 = load i64, i64* @vm_page_free_min, align 8
  %48 = icmp slt i64 %46, %47
  br i1 %48, label %49, label %51

49:                                               ; preds = %45
  %50 = call i32 @thread_wakeup(i32 ptrtoint (i32* @vm_page_free_wanted to i32))
  br label %51

51:                                               ; preds = %49, %45
  %52 = load i32, i32* @VM_CHECK_MEMORYSTATUS, align 4
  %53 = load i64, i64* %14, align 8
  %54 = load i32, i32* %15, align 4
  %55 = call i32 @vm_page_verify_contiguous(i64 %53, i32 %54)
  %56 = call i32 @assert(i32 %55)
  %57 = load i64, i64* %14, align 8
  %58 = load i64*, i64** %9, align 8
  store i64 %57, i64* %58, align 8
  %59 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %59, i32* %7, align 4
  br label %60

60:                                               ; preds = %51, %43, %31, %20
  %61 = load i32, i32* %7, align 4
  ret i32 %61
}

declare dso_local i64 @vm_page_find_contiguous(i32, i32, i32, i32, i32) #1

declare dso_local i32 @thread_wakeup(i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @vm_page_verify_contiguous(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
